# TaL

./: .env.example  .eslintrc.cjs  .gitignore  .npmrc  .prettierrc.cjs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_ENVIRONMENT_SETUP.md  LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  quasar.config.js  tsconfig.json  uno.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-tauri.yml
android/app/: build.gradle
docs/: README.md
docs/docsLegacyAIaW/: index.md
public/json/: assistants.en-US.json  assistants.es.json  assistants.zh-CN.json  assistants.zh-TW.json  plugins.es.json  plugins.zh-CN.json  plugins.zh-TW.json
scripts/: check-env.js  sync-version.js
src/: App.vue  version.json
src-pwa/: manifest.json
src-tauri/: .gitattributes  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/boot/: global-components.ts  i18n.ts  unocss.ts
src/components/: AAvatar.vue  ATip.vue  AbortableBtn.vue  AccountBtn.vue  AddInfoBtn.vue  AddMcpPluginDialog.vue  ArtifactItemIcon.vue  ArtifactItemMenu.vue  ArtifactsExpansion.vue  AssistantItem.vue  AssistantsExpansion.vue  AutocompleteInput.vue  AvatarPanel.vue  CodeJar.vue  ConvertArtifactDialog.vue  CopyBtn.vue  CustomProviders.vue  DarkSwitchBtn.vue  DialogList.vue  DialogsExpansion.vue  DragableSeparator.vue  EnablePluginsItems.vue  EnablePluginsMenu.vue  GetModelList.vue  HctPreviewCircle.vue  HintCard.vue  HueSlider.vue  HueSliderDialog.vue  ImageAvatar.vue  ImageInputArea.vue  ImportDataDialog.vue  InstallPluginBtn.vue  InstalledPlugins.vue  JsonInput.vue  JsonInputDialog.vue  MenuItem.vue  MessageAudio.vue  MessageFile.vue  MessageImage.vue  MessageInfoDialog.vue  (+35 more)
src/composables/: avatar-image.ts  back.ts  call-api.ts  close-artifact.ts  create-artifact.ts  create-dialog.ts  file-url.ts  filter-options.ts  first-visit.ts  get-model.ts  install-plugin.ts  key-composition.ts  listen-key.ts  live-query.ts  local-reactive.ts  locate-id.ts  login-dialogs.ts  md-preview-props.ts  open-last-workspace.ts  order.ts  persistent-reactive.ts  set-theme.ts  subscription-notify.ts  sync-ref.ts  workspace-actions.ts
src/css/: app.scss  quasar.variables.scss
src/i18n/: index.ts
src/layouts/: MainLayout.vue
src/pages/: AccountPage.vue  AssistantsPage.vue  EmptyPage.vue  ErrorNotFound.vue  ModelPricing.vue  PluginsPage.vue  SetProvider.vue  SettingsPage.vue  WorkspacePage.vue
src/router/: index.ts  routes.ts
src/stores/: assistants.ts  plugins.ts  providers.ts  user-data.ts  user-perfs.ts  workspaces.ts
src/utils/: artifacts-plugin.ts  audio-process.ts  db.ts  (+20 more)
(+58 files in other folders)
